--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "React App",
+  "short_name": "Chadcheck",
   "name": "Create React App Sample",
   "icons": [
     {
@@ -12,11 +12,7 @@
       "type": "image/png",
       "sizes": "192x192"
     },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
+  
   ],
   "start_url": ".",
   "display": "standalone",
